<resources>
    <string name="app_name">Shared Preferences Login</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="nome_do_app">Nome do App</string>
    <string name="password">Password</string>
    <string name="lembrar_credenciais">Lembrar credenciais</string>
    <string name="entrar">Entrar</string>
    <string name="ou">Ou</string>
    <string name="criar_conta">Criar conta</string>
    <string name="sair">Sair</string>
    <string name="ola">Olá!</string>
</resources>